Swagger documentation updated
